Fix Vercel deployment issues
- Remove Next.js 'use client' directives from React components
- Fix package.json with proper module type and build scripts
- Simplify Vite config and remove problematic aliases
- Fix all asset imports from figma:asset/ to @/assets/
- Remove version numbers from all package imports
- Add Vercel configuration for SPA routing
- Add .vercelignore for deployment optimization

App now builds successfully and is ready for Vercel deployment.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 
   {
-      "name": "Contractor's Rep Landing Page",
+      "name": "contractors-rep-landing",
       "version": "0.1.0",
       "private": true,
+      "type": "module",
       "dependencies": {
           "@radix-ui/react-accordion": "^1.2.3",
           "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -56,6 +57,8 @@
       },
       "scripts": {
           "dev": "vite",
-          "build": "vite build"
+          "build": "vite build",
+          "preview": "vite preview",
+          "start": "vite preview"
       }
   }
