Chore: Add Node.js engines field to package.json

--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
           "build": "vite build",
           "preview": "vite preview",
           "start": "vite preview"
+      },
+      "engines": {
+          "node": ">=18.0.0"
       }
   }
